--- a/vraj/Game/distributor.html
+++ b/vraj/Game/distributor.html
@@ -1,4 +1,4 @@
-0<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- 
 Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.3.5
 Version: 4.5
@@ -19,7 +19,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
     <head>
         <meta charset="utf-8" />
-        <title>Beer Game | Play</title>
+        <title>Beer Game | Distributor</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="SCMGAME" name="description" />
@@ -33,6 +33,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <link href="../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
         <!-- END GLOBAL MANDATORY STYLES -->
         <!-- BEGIN PAGE LEVEL PLUGINS -->
+        <link href="../assets/pages/css/about.min.css" rel="stylesheet" type="text/css" />
         <link href="../assets/global/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css" />
         <link href="../assets/global/plugins/morris/morris.css" rel="stylesheet" type="text/css" />
         <link href="../assets/global/plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet" type="text/css" />
@@ -57,7 +58,7 @@ License: You must have a valid license purchased only from themeforest(the above
             <div class="page-header-inner ">
                 <!-- BEGIN LOGO -->
                 <div class="page-logo">
-                    <a href="index.html">
+                    <a href="statistics.html">
                         <img src="../assets/layouts/layout2/img/IIMA.png" alt="logo" class="logo-default" style="height:65px;margin-top:5px;"/> </a>
                     <div class="menu-toggler sidebar-toggler">
                         <!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
@@ -247,10 +248,90 @@ License: You must have a valid license purchased only from themeforest(the above
                         </div>
                     </div>
                     <!-- END THEME PANEL -->
-                    <h3 class="page-title"> Dashboard
-                        <small>dashboard & statistics</small>
+                    <h3 class="page-title"> Distributor
+                        <small>Choose the Order for Distributor</small>
                     </h3>
-                    
+                    <div class="row widget-row">
+                        <div class="col-md-3">
+                            <!-- BEGIN WIDGET THUMB -->
+                            <div class="widget-thumb widget-bg-color-white text-uppercase margin-bottom-20 ">
+                                <h4 class="widget-thumb-heading"> Incoming Order </h4>
+                                <div class="widget-thumb-wrap">
+                                    <i class="widget-thumb-icon bg-green icon-envelope-letter"></i>
+                                    <div class="widget-thumb-body">
+                                        <span class="widget-thumb-subtitle">Units</span>
+                                        <span class="widget-thumb-body-stat" data-counter="counterup" data-value="7,644">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END WIDGET THUMB -->
+                        </div>
+                        <div class="col-md-3">
+                            <!-- BEGIN WIDGET THUMB -->
+                            <div class="widget-thumb widget-bg-color-white text-uppercase margin-bottom-20 ">
+                                <h4 class="widget-thumb-heading"> Incoming Delivery </h4>
+                                <div class="widget-thumb-wrap">
+                                    <i class="widget-thumb-icon bg-red icon-control-rewind"></i>
+                                    <div class="widget-thumb-body">
+                                        <span class="widget-thumb-subtitle">Units</span>
+                                        <span class="widget-thumb-body-stat" data-counter="counterup" data-value="1,293">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END WIDGET THUMB -->
+                        </div>
+                        <div class="col-md-3">
+                            <!-- BEGIN WIDGET THUMB -->
+                            <div class="widget-thumb widget-bg-color-white text-uppercase margin-bottom-20 ">
+                                <h4 class="widget-thumb-heading"> Outgoing Delivery </h4>
+                                <div class="widget-thumb-wrap">
+                                    <i class="widget-thumb-icon bg-purple icon-control-forward"></i>
+                                    <div class="widget-thumb-body">
+                                        <span class="widget-thumb-subtitle">Units</span>
+                                        <span class="widget-thumb-body-stat" data-counter="counterup" data-value="815">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END WIDGET THUMB -->
+                        </div>
+                        <div class="col-md-3">
+                            <!-- BEGIN WIDGET THUMB -->
+                            <div class="widget-thumb widget-bg-color-white text-uppercase margin-bottom-20 ">
+                                <h4 class="widget-thumb-heading"> Inventory </h4>
+                                <div class="widget-thumb-wrap">
+                                    <i class="widget-thumb-icon bg-blue icon-bar-chart"></i>
+                                    <div class="widget-thumb-body">
+                                        <span class="widget-thumb-subtitle">Units</span>
+                                        <span class="widget-thumb-body-stat" data-counter="counterup" data-value="5,071">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END WIDGET THUMB -->
+                        </div>
+                    </div>
+                        <div class="col-lg-12 col-md-12" style="text-align: center;">
+                        <div class="col-lg-3 col-md-6" style="text-align: center; margin: 0px auto; clear: both; float: none;">
+                            <div class="portlet light">
+                                <div class="card-icon">
+                                    <i class="icon-layers font-blue theme-font"></i>
+                                </div>
+                                <div class="portlet-body form">
+                                    <form role="form">
+                                        <div class="form-body">
+                                            <div class="form-group form-md-line-input form-md-floating-label" >
+                                                <input type="text" class="form-control" id="form_control_1" >
+                                                <label for="form_control_1" style="text-align:left; float:none;"> Enter Your Order </label>
+                                                <span class="help-block">Enter a Valid Integer</span>
+                                            </div>
+                                        </div>
+                                        <div class="form-actions" style="text-align:left;float:none; margin:0px auto;">
+                                            <button type="button" class="btn blue">Submit</button>
+                                        </div>
+                                    </form>    
+                                </div>
+                            </div>
+                        </div>
+                        </div>
                     <!-- END PAGE HEADER-->
                     <!-- BEGIN DASHBOARD STATS 1-->
                     
