Added Progress And Parameters Prototype

--- a/vraj/Game/factory.html
+++ b/vraj/Game/factory.html
@@ -98,13 +98,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
-                                        <a href="page_user_profile_1.html">
-                                            <i class="icon-user"></i> My Profile </a>
-                                    </li>
-                                   
-                                    <li class="divider"> </li>
-                                    <li>
-                                        <a href="page_user_login_1.html">
+                                        <a href="index.html">
                                             <i class="icon-key"></i> Log Out </a>
                                     </li>
                                 </ul>
