--- a/vraj/Game/statistics.html
+++ b/vraj/Game/statistics.html
@@ -1,4 +1,4 @@
-0<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- 
 Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.3.5
 Version: 4.5
@@ -97,13 +97,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
-                                        <a href="page_user_profile_1.html">
-                                            <i class="icon-user"></i> My Profile </a>
-                                    </li>
-                                   
-                                    <li class="divider"> </li>
-                                    <li>
-                                        <a href="page_user_login_1.html">
+                                        <a href="index.html">
                                             <i class="icon-key"></i> Log Out </a>
                                     </li>
                                 </ul>
