--- a/Game/index.html
+++ b/Game/index.html
@@ -69,16 +69,16 @@ License: You must have a valid license purchased only from themeforest(the above
                         <label class="control-label visible-ie8 visible-ie9">Username</label>
                         <div class="input-icon">
                             <i class="fa fa-user"></i>
-                            <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="username" /> </div>
+                            <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="username" id="username" /> </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label visible-ie8 visible-ie9">Password</label>
                             <div class="input-icon">
                                 <i class="fa fa-lock"></i>
-                                <input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="Password" name="password" /> </div>
+                                <input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="Password" name="password" id="password" /> </div>
                             </div>
                             <div class="form-actions">
-                                <button type="submit" class="btn green pull-right"> Login </button>
+                                <button type="submit" class="btn green pull-right" id="login" > Login </button>
                             </div>
                         </form>
                         <!-- END LOGIN FORM -->
@@ -111,6 +111,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- END THEME GLOBAL SCRIPTS -->
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script src="../assets/pages/scripts/login.min.js" type="text/javascript"></script>
+
 <!-- END PAGE LEVEL SCRIPTS -->
 <!-- BEGIN THEME LAYOUT SCRIPTS -->
 <!-- END THEME LAYOUT SCRIPTS -->
