--- a/Game/retailer.html
+++ b/Game/retailer.html
@@ -93,6 +93,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                         <img alt="" class="img-circle" src="../assets/layouts/layout2/img/avatar3_small.jpg" />
                                         <span class="username username-hide-on-mobile"> Nick </span>
+<!-- HOW TO GET USERNAME HERE DYNAMICALLY AND PASS IT ON TO THE FORM SO THAT DATA CONSISTENCY IS MAINTAINED -->
                                         <i class="fa fa-angle-down"></i>
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-default">
@@ -326,7 +327,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <i class="icon-bag font-blue theme-font"></i>
                                             </div>
                                             <div class="portlet-body form">
-                                                <form role="form">
+                                                <form role="form" action="Retail" method="post">
                                                     <div class="form-body">
                                                         <div class="form-group form-md-line-input form-md-floating-label" >
                                                             <input type="text" class="form-control" id="form_control_1" >
