--- a/Game/wholesaler.html
+++ b/Game/wholesaler.html
@@ -326,7 +326,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             <i class="icon-bag font-blue theme-font"></i>
                                         </div>
                                         <div class="portlet-body form">
-                                            <form role="form">
+                                            <form role="form" action="Wholesaler" method="post">
                                                 <div class="form-body">
                                                     <div class="form-group form-md-line-input form-md-floating-label" >
                                                         <input type="text" class="form-control" id="form_control_1" >
