--- a/Game/factory.html
+++ b/Game/factory.html
@@ -335,7 +335,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <i class="icon-bag font-blue theme-font"></i>
                                     </div>
                                     <div class="portlet-body form">
-                                        <form role="form">
+                                        <form role="form" action="Factory" method="post">
                                             <div class="form-body">
                                                 <div class="form-group form-md-line-input form-md-floating-label" >
                                                     <input type="text" class="form-control" id="form_control_1" >
